Spacing adjustment for Bug 622950 - Add Beta 4 Desktop to http://www.mozilla.com/firefox/
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk@80403 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/home.css
+++ b/style/covehead/home.css
@@ -44,7 +44,7 @@
 /* {{{ Main Content*/
 
 #home #beta-promo {
-    padding: 15px 30px 20px 60px;
+    padding: 25px 30px 20px 60px;
     width: 385px;
     margin: 0;
     font-size: 13px;
